# vitte

./: .gitattributes  Cargo.toml  Makefile  README.md  arborescence.md  build.rs  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: arduino.yml  ci.yml  docs.yml  pages.yml  perf.yml  pr-fast.yml  release.yml
backends/: DESIGN.md  HOWTO_REAL.md  README.md  TESTING.md
backends/api/: Cargo.toml
backends/cranelift/: Cargo.toml  README.md
backends/llvm/: Cargo.toml  README.md
cli/: Cargo.toml  README.md  ULTRA_CLI_README.md
cli-todo/: main.vitte
cli/examples/: bc_control.vitte  bc_inherit_call.vitte  bc_lambda_free.vitte  bc_lists.vitte  bc_records.vitte  bc_trace.vitte  class_user.vitte  destruct.vitte  lambda_map.vitte  oo_export_main.vitte  oo_init.vitte  oo_static.vitte  record_for.vitte  records.vitte  trait_printable.vitte  while_cmp.vitte
cli/examples/modules/: exports.vitte  util.vitte
cli/src/: bytecode.rs  main.rs  pretty.rs  runtime.rs  util.rs  vm.rs
cli/src/commands/: bc.rs  compile.rs  completions.rs  doc.rs  fmt.rs  llc.rs  man.rs  mod.rs  repl.rs  run.rs  tests.rs
cli/vitte/: Cargo.toml
cli/vitte/src/: main.rs
commands/: README.commands.md  bench.rs  completions.rs  man.rs  mod.rs  pm.rs
commands/completions/: vitte.bash
commands/help/: vitcmp.txt  vitcov.txt  vitdbg.txt  vitdep.txt  vitdev.txt  vitdis.txt  vitdoctor.txt  vitfix.txt  vitfmt.txt  vitgen.txt  vitgraph.txt  vitlint.txt  (+13 more)
compiler/: Cargo.toml  README.md
compiler/crates/vitte-ast/: Cargo.toml
compiler/crates/vitte-ast/src/: lib.rs
compiler/crates/vitte-backend-bytecode/: Cargo.toml
compiler/crates/vitte-backend-bytecode/src/: lib.rs
compiler/crates/vitte-backend-llvm/: Cargo.toml
compiler/crates/vitte-backend-llvm/src/: lib.rs
compiler/crates/vitte-backend-vm/: Cargo.toml
compiler/crates/vitte-backend-vm/src/: lib.rs
compiler/crates/vitte-compiler/: Cargo.toml
compiler/crates/vitte-compiler/src/: lib.rs
compiler/crates/vitte-hir/: Cargo.toml
compiler/crates/vitte-hir/src/: lib.rs
compiler/crates/vitte-infer/: Cargo.toml
compiler/crates/vitte-infer/src/: lib.rs
compiler/crates/vitte-mir/: Cargo.toml
compiler/crates/vitte-mir/src/: lib.rs
compiler/crates/vitte-resolver/: Cargo.toml
compiler/crates/vitte-resolver/src/: lib.rs
compiler/crates/vitte-ty/: Cargo.toml
compiler/crates/vittec/: Cargo.toml
compiler/crates/vittec/src/: main.rs
compiler/examples/: cond.vitte  hello.vitte  list.vitte
compiler/vittec/: Cargo.toml
compiler/vittec/src/: main.rs
compiler/vittec/src/borrowck/: mod.rs
compiler/vittec/src/codegen/: mod.rs
compiler/vittec/src/driver/: mini_backend.rs  mod.rs  transpile_c.rs
compiler/vittec/src/hir/: mod.rs
compiler/vittec/src/lexer/: mod.rs
compiler/vittec/src/linker/: mod.rs
compiler/vittec/src/mir/: mod.rs
compiler/vittec/src/typecheck/: mod.rs
crates/vitte-cli/: Cargo.toml
crates/vitte-cli/src/: lib.rs  main.rs
crates/vitte-compiler/: Cargo.toml
crates/vitte-compiler/src/: lib.rs
crates/vitte-core/: Cargo.toml
crates/vitte-core/src/: Cargo.toml  asm.rs  lib.rs  loader.rs  util.rs
crates/vitte-core/src/bytecode/: chunk.rs  disasm.rs  format.rs  mod.rs  ops.rs
crates/vitte-core/src/compiler/: config.rs  driver.rs  mod.rs  output.rs
crates/vitte-core/src/runtime/: eval.rs  mod.rs  parser.rs  pretty.rs  tokenizer.rs
crates/vitte-core/src/vitte-vm/: mod.rs
crates/vitte-core/tests/: integration.rs
crates/vitte-tools/: Cargo.toml
crates/vitte-tools/src/: lib.rs
desktop/: Makefile  README.md  gtk_real.c  gtk_stub.c  main.vitte  qt_real.cpp  qt_stub.cpp
docs/: ABI_vitx.md  Commands.md  DeepSyntax.md  EBNF_FULL.md  ENGINEERING_CHECKLIST.md  Errors.md  KERNEL_GUIDE.md  MemoryModel.md  Platforms.md  REGISTRY.md  STYLE.md  VITX_SPEC.md  book.toml  build-from-source.md  bytecode.md  contributing.md  ffi.md  index.html  index.md  language-spec.md  lowering.md  stdlib.md  syntax.md  vm.md
embedded-blink/: main.vitte
examples/: bc_break.vitte  bc_class_call.vitte  bc_index.vitte  bc_lambda_self.vitte  bc_slice_range.vitte  bc_static_call.vitte  class_assign.vitte  closures.vitte  cond.vitte  demo.vitte  demo2.vitte  demo3.vitte  demo4.vitte  fn.vitte  for_assign.vitte  from_import.vitte  gc.vitte  hello.vitte  imports.vitte  indexing.vitte  kitchen_sink.vitte  llvm_lists.vitte  llvm_run_demo.vitte  llvm_strings.vitte  lsp_demo.vitte  match_class.vitte  math.vitte  mod_a.vitte  mod_b.vitte  mut_upvalues.vitte  ns_import.vitte  oo_inherit.vitte  oo_static_method.vitte  privacy.vitte  set_capture.vitte  slices.vitte  str_concat.vitte  structural.vitte  use_import.vitte  vm_demo.vitte
kernel/: README.md
microvitte/: library.properties
modules/: README.md  cache.vitte  channel.vitte  checksum.vitte  cli.vitte  config.vitte  csv.vitte  eventbus.vitte  exports.vitte  feature_flags.vitte  fs_atomic.vitte  graph.vitte  http_client.vitte  idgen.vitte  ini.vitte  kvstore.vitte  log.vitte  main.vitte  mathx.vitte  metrics.vitte  migrate.vitte  pagination.vitte  plugin.vitte  pool.vitte  prioq.vitte  random.vitte  rate_limiter.vitte  result_ext.vitte  retry.vitte  rle.vitte  scheduler.vitte  stringx.vitte  supervisor.vitte  taskpool.vitte  tracing.vitte  util.vitte  uuid.vitte  validate.vitte  yaml_lite.vitte
registry/: index.json
rfcs/: TEMPLATE.md  index.md
runtime/: Cargo.toml
scripts/: bootstrap_transpile.sh  build_all.sh  ci_check.sh  clean_all.sh  compress_bytecode.py  decompress_bytecode.py  disasm.rs  fmt.sh  gen_bytecode.sh  gen_licenses.sh  install-windows.ps1  new.sh  release.sh  release_package.sh  repl.rs  test_all.sh  vitcc.bat  vitcc.sh
templates/: README.md
tests/: bc_test.rs  compiler_roundtrip.rs
vitte-lang/compiler/: Cargo.toml  README.md
vitte-lang/compiler/src/: config.rs  diagnostics.rs  lib.rs  pipeline.rs
vitte-lang/compiler/src/backends/: bytecode_cli.rs  mod.rs
vitte-lang/compiler/src/util/: fs.rs
vitte-lang/compiler/tests/: smoke.rs
web-echo/: README.md  main.vitte
(+233 files in other folders)
