
[package]
name = "vitte-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI vitte-lang : run, repl, fmt, doc, llc, test, bench, pm, completions, man"
repository = "https://example.com/vitte-lang"

[dependencies]
vitte-compiler = { path = "../vitte-lang/compiler" }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6"
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.bincode]
version = "1.3"
