[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
camino = "1"
color-eyre = "0.6"
env_logger = "0.11"

# Ces trois-là sont optionnels (activés par features)
vitte-core = { path = "../vitte-core", optional = true }
vitte-compiler = { path = "../vitte-compiler", optional = true }
vitte-vm = { path = "../vitte-vm", optional = true }

[features]
default = []
core = ["vitte-core"]
compiler = ["core", "vitte-compiler"]
vm = ["core", "vitte-vm"]
