[package]
name = "vitte-compiler"
version = "0.1.0"
edition = "2021"
description = "Frontend du langage Vitte (lexer, parser, AST, codegen vers vitte-core)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vitte-lang/vitte"
authors = ["Vincent <you@example.com>"]

[lib]
name = "vitte_compiler"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
# On sépare par couches pour garder un compilateur modulaire.
default = ["lexer", "parser", "codegen"]

# Lexer basé sur 'logos' (rapide & simple)
lexer = ["dep:logos"]

# Parser/AST (pas de dep externe requise, mais feature distincte pour modularité)
parser = []

# Génération de bytecode vers vitte-core (Chunk/Op…)
codegen = ["dep:vitte-core"]

# Instrumentation optionnelle
tracing = ["dep:tracing"]

# (exemple) sérialisation pour dumps AST/IR si besoin
serde = ["dep:serde"]

[dependencies]
anyhow = "1"
thiserror = "1"

# Lexer
logos = { version = "0.14", optional = true }

# Bytecode core (pour la phase codegen)
vitte-core = { path = "../vitte-core", optional = true }

# Optionnels
tracing = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
pretty_assertions = "1"      # diffs lisibles pour tests
indoc = "2"                  # strings multilignes pour fixtures tests

[package.metadata.docs.rs]
all-features = true
