[package]
name = "vitte-compiler"
version = "0.1.0"
edition = "2021"
description = "Orchestrateur de compilation pour vitte-lang (pipeline + backends)"
license = "MIT OR Apache-2.0"
repository = "https://example.com/vitte-lang"

[features]
default = ["bytecode-cli"]
bytecode-cli = []
experimental = []

[dependencies]
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
camino = "1.1"

[dev-dependencies]
tempfile = "3.10"