[package]
name = "vitte-compiler"
version = "0.5.0"
edition = "2021"
[dependencies]
vitte-ast = { path = "../vitte-ast" }
vitte-hir = { path = "../vitte-hir" }
vitte-resolver = { path = "../vitte-resolver" }
vitte-infer = { path = "../vitte-infer" }
vitte-mir = { path = "../vitte-mir" }
vitte-backend-bytecode = { path = "../vitte-backend-bytecode" }
vitte-backend-vm = { path = "../vitte-backend-vm" }
vitte-backend-llvm = { path = "../vitte-backend-llvm" }
[lib]
path = "src/lib.rs"
